objects/Cobalt_Site_Config_Details_History__c.object
<CustomObject>
    <description>Site Config Detail History migrated from CB Advantage SF instance</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Config_Details__c</fullName>
        <label>Site Config Details</label>
        <referenceTo>Site_Config_Details__c</referenceTo>
        <relationshipName>Site_Config_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Site Config Details History</label>
    <nameField>
        <displayFormat>SCH-{00000000}</displayFormat>
        <label>Site Config History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Config Details History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>